--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 <body>
 	<div class="container">
 		<div class="counter-box">
-			<p>CPS:</p>
-			<div id="valueOfCPS">0.00</div>
+			<div class="box">
+				<p>CPS:</p>
+				<div id="valueOfCPS">0.00</div>
+			</div>
+			<div class="box">	
+				<p>max CPS:</p>
+				<div id="valueOfMaxCPS">0.00</div>
+			</div>
 		</div>
 		<div class="hit-box no-select" id="hit-area">
 			<p>Click the green area</p>
